--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@types/node": "20.12.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -30,6 +31,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "5.4.4"
   }
 }
